--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,9 +7,9 @@ services:
     extra_hosts:
       - host.docker.internal:host-gateway
     command:
-      -  --config.file=/etc/prometheus/prometheus.yml
-    volumes:
-      - ./docker/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      - --config.file=/etc/prometheus/prometheus.yml
+   # volumes:
+    #  - ./docker/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
       - "9090:9090"
 
