--- a/docker/prometheus/prometheus.yml
+++ b/docker/prometheus/prometheus.yml
@@ -3,7 +3,7 @@ global:
   evaluation_interval: 10s
 
 scrape_configs:
-  - job_name: "hello-service-app"
+  - job_name: "springboot-prometheus-app"
     metrics_path: /actuator/prometheus
     static_configs:
       - targets: ["host.docker.internal:8080"]
